[QFEED-80] Fix: Stream.collect(Collectors.toList())->Stream.toList()